lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3
  labels:
    app: lab3
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: lab3
